--- a/portal-frontend/src/app/features/applications/review-submission/review-zoning/review-zoning.component.html
+++ b/portal-frontend/src/app/features/applications/review-submission/review-zoning/review-zoning.component.html
@@ -2,9 +2,6 @@
 <div>
   <div class="description">
     <div>Provide information about applicable zoning</div>
-    <div>
-      <button class="save-button" (click)="onSave()" mat-flat-button color="primary">Save Progress</button>
-    </div>
   </div>
   <form [formGroup]="zoningForm">
     <div class="form-row">
@@ -64,6 +61,7 @@
             placeholder="Type minimum lot size or N/A"
             formControlName="zoningMinimumLotSize"
           />
+          <span matTextSuffix>ha</span>
         </mat-form-field>
         <div
           *ngIf="zoningMinimumLotSize.invalid && (zoningMinimumLotSize.dirty || zoningMinimumLotSize.touched)"
@@ -90,15 +88,4 @@
       </div>
     </div>
   </form>
-  <div class="button-container">
-    <button (click)="onExit()" mat-stroked-button color="accent">Save and Exit</button>
-    <div>
-      <button mat-stroked-button color="primary" (click)="onNavigateToStep(currentStep - 1)">
-        Previous<span class="mobile-hidden"> Step</span>
-      </button>
-      <button mat-flat-button color="primary" (click)="onNavigateToStep(currentStep + 1)">
-        Next<span class="mobile-hidden"> Step</span>
-      </button>
-    </div>
-  </div>
 </div>
