--- a/portal-frontend/src/app/features/applications/review-submission/review-submit/review-submit.component.html
+++ b/portal-frontend/src/app/features/applications/review-submission/review-submit/review-submit.component.html
@@ -502,7 +502,7 @@
   <div>
     <button (click)="onDownloadPdf()" mat-flat-button color="primary">Download PDF</button>
   </div>
-  <div class="button-container">
+  <div class="menu">
     <button (click)="onExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
       <button mat-stroked-button color="primary" (click)="onNavigateToStep(currentStep - 1)">
