--- a/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
@@ -25,7 +25,7 @@
       ></app-parcel-details>
     </div>
   </cdk-step>
-  <cdk-step label="Other Parcels in the Community">
+  <cdk-step label="Other Owned Parcels">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.OtherParcel">
       <app-other-parcels
