--- a/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.html
@@ -1,22 +1,8 @@
 <h3 class="flex-item">{{ pageTitle }}</h3>
 <div class="review-table">
-  <div class="subheading2 grid-1" *ngIf="parcelType === PARCEL_TYPES.OTHER">
-    Does any of the parcel owners hold an interest (ownership or lease) in any other land (ALR or non-ALR) within the
-    community where the application parcel(s) is located?
-  </div>
-  <div class="grid-double" *ngIf="parcelType === PARCEL_TYPES.OTHER">
-    <span *ngIf="application.hasOtherParcelsInCommunity !== null">{{
-      application.hasOtherParcelsInCommunity ? 'Yes' : 'No'
-    }}</span>
-    <app-no-data [showRequired]="showErrors" *ngIf="application.hasOtherParcelsInCommunity === null"></app-no-data>
-  </div>
-
   <ng-container *ngFor="let parcel of parcels; let parcelInd = index">
     <div class="full-width parcel-header">
-      <h4>
-        Parcel {{ parcelType === PARCEL_TYPES.OTHER ? getLetterIndex(parcelInd) : parcelInd + 1 }}: Parcel and Owner
-        Information
-      </h4>
+      <h4>Parcel {{ parcelInd + 1 }}: Parcel and Owner Information</h4>
       <div>
         <button
           *ngIf="showEdit"
@@ -25,7 +11,7 @@
           color="accent"
           (click)="onEditParcelClick(parcel.uuid)"
         >
-          Edit Parcel {{ parcelType === PARCEL_TYPES.OTHER ? getLetterIndex(parcelInd) : parcelInd + 1 }}
+          Edit Parcel {{ parcelInd + 1 }}
         </button>
         <button
           *ngIf="showEdit"
@@ -152,10 +138,10 @@
         <app-no-data [showRequired]="showErrors" *ngIf="parcel.owners.length === 0"></app-no-data>
       </div>
     </div>
-    <div class="subheading2 grid-1" *ngIf="parcelType !== PARCEL_TYPES.OTHER">
+    <div class="subheading2 grid-1">
       I confirm that the owner information provided above matches the current Certificate of Title
     </div>
-    <div class="grid-double" *ngIf="parcelType !== PARCEL_TYPES.OTHER">
+    <div class="grid-double">
       <span *ngIf="parcel.isConfirmedByApplicant">Yes</span>
       <app-no-data [showRequired]="showErrors" *ngIf="!parcel.isConfirmedByApplicant"></app-no-data>
     </div>
