Primary Contact Updates
* Hide authorization letter section if its not required and nothing is uploaded
* Only consider owners who are linked to a parcel

--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -130,7 +130,7 @@
     </form>
   </div>
 </section>
-<section>
+<section *ngIf="needsAuthorizationLetter || files.length > 0">
   <h4>Primary Contact Authorization Letters</h4>
   <div>
     <ng-container *ngIf="!isGovernmentUser">
