--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
@@ -130,7 +130,7 @@
     </form>
   </div>
 </section>
-<section>
+<section *ngIf="needsAuthorizationLetter || hasCrownParcels || files.length > 0">
   <h4>Primary Contact Authorization Letters</h4>
   <div>
     <ng-container *ngIf="!isGovernmentUser">
