Other Parcels Fixes
* Add missing required message
* Add missing Edit Section Button

--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.html
@@ -31,6 +31,9 @@
         <app-no-data [showRequired]="showErrors" *ngIf="!applicationSubmission.otherParcelsDescription"></app-no-data>
       </div>
     </ng-container>
+    <div *ngIf="showEdit" class="edit-button">
+      <button mat-flat-button (click)="onNavigateToStep(1)" color="accent">Edit Section</button>
+    </div>
   </div>
 </section>
 <section>
