--- a/portal-frontend/src/app/features/notifications/edit-submission/parcels/parcel-details.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/parcels/parcel-details.component.html
@@ -28,7 +28,7 @@
     <div>
       <div class="flex-evenly-wrap parcel-buttons-wrappers">
         <button class="margin-top-1-half" mat-stroked-button color="primary" (click)="onSave()">
-          Save Parcel #{{ parcelInd + 1 }} Details
+          Save Parcel #{{ parcelInd + 1 }}
         </button>
         <button
           class="margin-top-1-half"
@@ -37,7 +37,7 @@
           color="accent"
           (click)="onDelete(parcel.uuid, parcelInd + 1)"
         >
-          Delete Parcel #{{ parcelInd + 1 }} Details
+          Delete Parcel #{{ parcelInd + 1 }}
         </button>
       </div>
     </div>
