Update Government Step label

--- a/portal-frontend/src/app/features/applications/edit-submission/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/select-government/select-government.component.html
@@ -1,9 +1,6 @@
 <div class="step-description">
   <h2>Government</h2>
-  <p>
-    Please indicate the local government in which the parcel(s) under application is located. If the property is located
-    within the Islands Trust, please select 'Islands Trust' and not a specific island.
-  </p>
+  <p>Please indicate the local or First Nation government in which the parcel(s) are located.</p>
   <p>*All fields are required unless stated optional.</p>
 </div>
 <form [formGroup]="form">
